cmake_minimum_required(VERSION 3.16)

project(priority_queue_tests LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
    add_compile_options(
        /W4
        /EHsc
        /utf-8
    )
else()
    add_compile_options(
        -Wall
        -Wextra
        -pedantic
    )
endif()

include_directories(
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/..
)

set(TEST_SOURCES
    test_deque_priority_queue.cpp
    test_vector_priority_queue.cpp
    main.cpp
)

add_executable(test ${TEST_SOURCES})
